[package]
name        = "blink"
description = "Teensy 4.1 simple loop blink (bare-metal Rust strawman)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
teensy4-bsp   = { workspace = true }
teensy4-panic = { workspace = true }
cortex-m      = { workspace = true }
